[package]
name = "teapot_tools"
version = "0.2.0-rc.1"
edition = "2021"
description = "Replacement for depot_tools (gclient) and luci-go (cipd)"
categories = ["development-tools"]
keywords = ["gclient", "depot_tools", "cipd", "chromium-infra"]
authors = ["Lauren N. Liberda <lauren@selfisekai.rocks>"]
repository = "https://codeberg.org/selfisekai/teapot_tools"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gclient"

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.6", features = ["derive"] }
futures = "0.3.24"
linya = "0.3.0"
once_cell = "1.14.0"
path-absolutize = "3.0.13"
prost = "0.11.0"
pyo3 = { version = "0.17.1", features = ["auto-initialize", "macros", "serde"] }
reqwest = { version = "0.11.11", features = ["gzip"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
smart-default = "0.6.0"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }
url = "2.2.2"
zip = { version = "0.6.2", default-features = false, features = ["deflate"] }

[build-dependencies]
prost-build = "0.11.1"
