[package]
name = "teapot_tools"
version = "0.4.2"
edition = "2021"
description = "Replacement for depot_tools (gclient) and luci-go (cipd)"
categories = ["development-tools"]
keywords = ["gclient", "depot_tools", "cipd", "chromium-infra"]
authors = ["Lauren N. Liberda <lauren@selfisekai.rocks>"]
repository = "https://codeberg.org/selfisekai/teapot_tools"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "download_from_google_storage"

[[bin]]
name = "gclient"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
futures = "0.3.28"
globwalk = "0.8.1"
linya = "0.3.0"
once_cell = "1.17.1"
path-absolutize = "3.0.14"
prost = "0.11.9"
pyo3 = { version = "0.18.3", features = ["auto-initialize", "macros", "serde"] }
reqwest = { version = "0.11.17", features = ["gzip"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
smart-default = "0.7.1"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
url = "2.3.1"
zip = { version = "0.6.4", default-features = false, features = ["deflate"] }

[build-dependencies]
prost-build = "0.11.9"
